@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Cleanup of GLOBAL(ShipStamp.frame) abuse; fixes bug #1054 - Alex
 - Game attempts to exit cleanly under normal circustances (bug #52) - Alex
 - Fixed Mmrnmhrm's X-Form transformation without energy use (bug #1004) - Alex
 - Added missing sleeps in DoInput() functions (bug #893) - Alex
